--- a/example.bitcoin.conf
+++ b/example.bitcoin.conf
@@ -2,13 +2,13 @@
 daemon=1
 # Tell Bitcoin to run on a regtest network
 regtest=1
-
+txindex=1
 fallbackfee=0.001
-
+rpcauth=bitboy1:bitboy1
 # Tell Bitcoin where to put blockchain data
 # datadir=/home/ben/.bitcoin/data_test
 # Set the RPC password
-# rpcauth=bitboy1
+# 
 # Turn on the RPC server
 # server=1
 # Turn on ZMQ publishing
